# mcWorldReader

./: .gitignore  CMakeLists.txt  README.md  anvil.py  pyproject.toml  requirements.txt  setup.py  world.py
mcworldreader/: __init__.py  anvil.cpp
mcworldreader/include/: anvil.h  pool.hpp
src/: CMakeLists.txt  anvil.cpp  utils.cpp  world.py
src/include/: anvil.h  pool.hpp  utils.h
