[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcWorldReader"
authors = [
    {name = "suzakuwcx", email = "suzakuwcx@gmail.com"},
]
description = 'A python library to read .mca file'
version = "1.0.0"
dependencies = []
requires-python = '>=3.10'
optional-dependencies = {}

[tool.setuptools.packages]
find = {}  
